--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,120 @@
-[data-font-family=BKoodak] {
-    font-family: "BKoodak";
+[data-font-family=BBadr] {
+	font-family: "BBadr";
 }
-
-[data-font-family=BTraffic] {
-    font-family: "BTraffic";
+[data-font-family=BBaran] {
+	font-family: "BBaran";
 }
-
-[data-font-family=BTitrBold] {
-    font-family: "BTitrBold";
+[data-font-family=BBardiya] {
+	font-family: "BBardiya";
 }
-
-[data-font-family=BYekan] {
-    font-family: "BYekan";
+[data-font-family=BCompset] {
+	font-family: "BCompset";
 }
-
+[data-font-family=BDavat] {
+	font-family: "BDavat";
+}
+[data-font-family=BElham] {
+	font-family: "BElham";
+}
+[data-font-family=BEsfehanBold] {
+	font-family: "BEsfehanBold";
+}
+[data-font-family=BFantezy] {
+	font-family: "BFantezy";
+}
+[data-font-family=BFarnaz] {
+	font-family: "BFarnaz";
+}
+[data-font-family=BFerdosi] {
+	font-family: "BFerdosi";
+}
+[data-font-family=BHamid] {
+	font-family: "BHamid";
+}
+[data-font-family=BHelal] {
+	font-family: "BHelal";
+}
+[data-font-family=BHoma] {
+	font-family: "BHoma";
+}
+[data-font-family=BJadidBold] {
+	font-family: "BJadidBold";
+}
+[data-font-family=BJalal] {
+	font-family: "BJalal";
+}
+[data-font-family=BKoodakBold] {
+	font-family: "BKoodakBold";
+}
+[data-font-family=BKourosh] {
+	font-family: "BKourosh";
+}
+[data-font-family=BLotus] {
+	font-family: "BLotus";
+}
+[data-font-family=BMahsa] {
+	font-family: "BMahsa";
+}
+[data-font-family=BMehrBold] {
+	font-family: "BMehrBold";
+}
 [data-font-family=BMitra] {
-    font-family: "BMitra";
+	font-family: "BMitra";
 }
-
+[data-font-family=BMorvarid] {
+	font-family: "BMorvarid";
+}
+[data-font-family=BNarm] {
+	font-family: "BNarm";
+}
+[data-font-family=BNasimBold] {
+	font-family: "BNasimBold";
+}
+[data-font-family=BNazanin] {
+	font-family: "BNazanin";
+}
 [data-font-family=BRoya] {
-    font-family: "BRoya";
+	font-family: "BRoya";
 }
-
+[data-font-family=BSetarehBold] {
+	font-family: "BSetarehBold";
+}
+[data-font-family=BShiraz] {
+	font-family: "BShiraz";
+}
+[data-font-family=BSinaBold] {
+	font-family: "BSinaBold";
+}
+[data-font-family=BTabassom] {
+	font-family: "BTabassom";
+}
+[data-font-family=BTehran] {
+	font-family: "BTehran";
+}
+[data-font-family=BTitrBold] {
+	font-family: "BTitrBold";
+}
+[data-font-family=BTitrTGEBold] {
+	font-family: "BTitrTGEBold";
+}
+[data-font-family=BTraffic] {
+	font-family: "BTraffic";
+}
+[data-font-family=BVahidBold] {
+	font-family: "BVahidBold";
+}
 [data-font-family=BYagut] {
-    font-family: "BYagut";
+	font-family: "BYagut";
 }
-
-
-.font-preview {
+[data-font-family=BYas] {
+	font-family: "BYas";
+}
+[data-font-family=BYekan] {
+	font-family: "BYekan";
+}
+[data-font-family=BZIBA] {
+	font-family: "BZIBA";
+}
+[data-font-family=BZar] {
+	font-family: "BZar";
 }
